--- a/catalog/templates/catalog/includes/inc_record_card.html
+++ b/catalog/templates/catalog/includes/inc_record_card.html
@@ -12,4 +12,4 @@
             <p><a class="btn btn-danger" href="{% url 'main:record_delete' object.pk %}">Удалить &raquo;</a></p>
         </div>
     </div>
-</div><!-- /.col-lg-4 -->
+</div>
