--- a/catalog/templates/catalog/product_list.html
+++ b/catalog/templates/catalog/product_list.html
@@ -1,7 +1,7 @@
-{% extends 'main/base.html' %}
+{% extends 'catalog/base.html' %}
 
 {% block content %}
     {% for object in object_list %}
-        {% include 'main/includes/inc_product_card.html' %}
+        {% include 'catalog/includes/inc_product_card.html' %}
     {% endfor %}
 {% endblock %}
