--- a/catalog/templates/catalog/record_detail.html
+++ b/catalog/templates/catalog/record_detail.html
@@ -1,4 +1,4 @@
-{% extends 'main/base.html' %}
+{% extends 'catalog/base.html' %}
 {% load mediapath %}
 {% block content %}
     <div class="col">
@@ -25,7 +25,7 @@
 
                 </table>
             </div>
-            <a href="{% url 'main:records_list' %}" class="btn btn-primary"><< Назад</a>
+            <a href="{% url 'catalog:records_list' %}" class="btn btn-primary"><< Назад</a>
         </div>
     </div>
 {% endblock %}
