--- a/catalog/templates/catalog/record_list.html
+++ b/catalog/templates/catalog/record_list.html
@@ -1,8 +1,8 @@
-{% extends 'main/base.html' %}
+{% extends 'catalog/base.html' %}
 
 {% block content %}
     <div class="col-12">
-        <a href="{% url 'main:record_create' %}" class="btn btn-primary m-2">Создать запись</a>
+        <a href="{% url 'catalog:record_create' %}" class="btn btn-primary m-2">Создать запись</a>
     </div>
     {% for object in object_list %}
         {% include 'main/includes/inc_record_card.html' %}
