--- a/catalog/templates/catalog/includes/inc_product_card.html
+++ b/catalog/templates/catalog/includes/inc_product_card.html
@@ -3,5 +3,5 @@
 <div class="col-lg-4">
     <img class="rounded-circle" src="{% mediapath object.image %}" alt="Generic placeholder image" width="140" height="140">
     <h2>{{ object.name }}</h2>
-    <p><a class="btn btn-secondary" href="{% url 'main:product' object.pk %}" role="button">Подробнее &raquo;</a></p>
+    <p><a class="btn btn-secondary" href="{% url 'catalog:product' object.pk %}" role="button">Подробнее &raquo;</a></p>
 </div><!-- /.col-lg-4 -->
