--- a/catalog/templates/catalog/includes/inc_main_menu.html
+++ b/catalog/templates/catalog/includes/inc_main_menu.html
@@ -1,5 +1,23 @@
-<ul class="navbar-nav mr-auto">
-    <li class="nav-item active">
-        <a class="nav-link" href="/contact/">Форма обратной связи <span class="sr-only"></span></a>
+<ul class="navbar-nav me-auto mb-2 mb-md-0">
+    <li class="nav-item">
+        <a class="nav-link" href="{% url 'catalog:index' %}">Главная</a>
     </li>
+    <li class="nav-item">
+        <a class="nav-link" href="{% url 'catalog:contacts' %}">Контакты</a>
+    </li>
+    {% if user.is_authenticated %}
+    <li class="nav-item">
+        <a class="nav-link" href="{% url 'users:profile' %}">Профиль</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="{% url 'users:logout' %}">Выйти</a>
+    </li>
+    {% else %}
+    <li class="nav-item">
+        <a class="nav-link" href="{% url 'users:login' %}">Войти</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="{% url 'users:register' %}">Зарегистрироваться</a>
+    </li>
+    {% endif %}
 </ul>
