--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,20 +1,17 @@
-{% extends 'catalog/base.html'%}
-
-{% load mediapath %}
+{% extends 'catalog/base.html' %}
 
 {% block content %}
     <div class="col-3"></div>
     <div class="col-6">
-    <div class="uk-card">
-        <div class="uk-card-header"></div>
-        <div class="uk-card-body">
-            <form method="post">
-                {% csrf_token %}
-                {{ form.as_p }}
-                <button type="submit" class="uk-button-primary">Войти</button>
-            </form>
+        <div class="card">
+            <div class="card-header"></div>
+            <div class="card-body">
+                <form method="post">
+                    {% csrf_token %}
+                    {{ form.as_p }}
+                    <button type="submit" class="btn btn-success">Войти</button>
+                </form>
+            </div>
         </div>
-
-    </div>
     </div>
 {% endblock %}
